@@ -22,9 +22,6 @@ from cexceptions import *
 import action_litesync
 from rhpl.translate import _, N_, textdomain, utf8
 
-
-TESTMODE = False
-
 #--------------------------------------------
 
 class Profiles(collection.Collection):
@@ -35,12 +32,6 @@ class Profiles(collection.Collection):
     def factory_produce(self,config,seed_data):
         return profile.Profile(config).from_datastruct(seed_data)
 
-    def filename(self):
-        if TESTMODE:
-            return "/var/lib/cobbler/test/profiles"
-        else:
-            return "/var/lib/cobbler/profiles"
-
     def remove(self,name,with_delete=True):
         """
         Remove element named 'name' from the collection
@@ -49,12 +40,15 @@ class Profiles(collection.Collection):
         for v in self.config.systems():
            if v.profile.lower() == name:
                raise CX(_("removal would orphan system: %s") % v.name)
-        if self.find(name=name):
+        obj = self.find(name=name)
+        if obj is not None:
             if with_delete:
-                self._run_triggers(self.listing[name], "/var/lib/cobbler/triggers/delete/profile/pre/*")
+                self._run_triggers(obj, "/var/lib/cobbler/triggers/delete/profile/pre/*")
                 lite_sync = action_litesync.BootLiteSync(self.config)
                 lite_sync.remove_single_profile(name)
-                self._run_triggers(self.listing[name], "/var/lib/cobbler/triggers/delete/profile/post/*")
+            self.config.serialize_delete(self, obj)
+            if with_delete:
+                self._run_triggers(obj, "/var/lib/cobbler/triggers/delete/profile/post/*")
             del self.listing[name]
             return True
         raise CX(_("cannot delete an object that does not exist"))
