@@ -19,20 +19,18 @@ import subprocess
 import tempfile
 import shutil
 
+from cobbler.cexceptions import *  
+
 from cobbler import settings
 from cobbler import collection_distros
 from cobbler import collection_profiles
 from cobbler import collection_systems
 
-settings.TESTMODE = True
-collection_distros.TESTMODE = True
-collection_profiles.TESTMODE = True
-collection_systems.TESTMODE = True
-
 from cobbler import api
+
 from cobbler import config
 from cobbler import utils
-from cobbler.cexceptions import CobblerException
+utils.TEST_MODE = True
 
 FAKE_INITRD="initrd-2.6.15-1.2054_FAKE.img"
 FAKE_INITRD2="initrd-2.5.16-2.2055_FAKE.img"
